Version 3.1-2

 o Fixed bug handling 'start' argument in glmm's.  Reported by Mariano Devoto; fix by Ben Bolker
 
 o Modified internal function make.ticks() so that it doesn't fail due to floating-point inaccuracy (following error reported by Joe Clayton Ford).

Version 3.1-1

 o Requires R >= 3.2.0 (requested by CRAN).

Version 3.1-0

 o Corrected and improved computation of partial residuals, fixing bug introduced by bug fix in 3.0-7.

Version 3.0-7

 o Extends to logistic ordinal response models fit using 'clm' and 'clmm' in the 'ordinal package.
 
 o Fixed bug in handling of terms like polynomials in non-focal covariates (reported by Urs Kalbitzer).
 
 o Added package tests.
 
Version 3.0-6

 o Fix bug in Effect for mer objects with 'poly' in the formula (and related issues).
 
 o Allow "||" in variance formulae in lmer4 models.
 
 o Minor bug in handling class=="array" in the Effect() method.
 
 Version 3.0-5
 
 o Fixed bug when the name of the data frame is the name of function like "sort" in mixed-effects models with lme4 (problem originally reported by Saudi Sadiq).
 
 o Fixed bug in predictor-name matching that could occur in names with periods (reported by Trevor Avery).
 
 o Fixed package imports to conform to new CRAN rules.
 
 o Added residuals.cex argument to plot.eff().
 
 o Changes to work with pbkrtest 0.4-4.

Version 3.0-4

 o New default of KR=FALSE because KR=TRUE can be very slow.

 o KR argument now works correctly with allEffects().

 o Mixed models with negative binomial did not work and now they do.

 o Added methods for ordinal mixed models using 'clmm2' for the ordinal package.

 o Moved pbkrtest to Suggests (wasn't done properly previously).

 o Tweak to handling key.args (suggestion of Michael Friendly).

 o Use non-robust loess smooth for partial residuals from non-Gaussian GLMs.

 o Rationalized type and rescale.axis arguments to plot.eff(); scale.axis argument is deprecated.
