@@ -3,6 +3,8 @@ Version 3.1-2
  o Fixed bug handling 'start' argument in glmm's.  Reported by Mariano Devoto; fix by Ben Bolker
  
  o Modified internal function make.ticks() so that it doesn't fail due to floating-point inaccuracy (following error reported by Joe Clayton Ford).
+ 
+ o Check formula for presence of factor(), etc. (suggestion of Ulrike Gromping).
 
 Version 3.1-1
 
